hphp/test/zend/good/ext/ldap/tests/ldap_bind_basic.php
<?php
require "connect.inc";

$link = ldap_connect($host, $port);
ldap_set_option($link, LDAP_OPT_PROTOCOL_VERSION, $protocol_version);
var_dump(ldap_bind($link));
?>
===DONE===